fix example env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 UPSTASH_REDIS_REST_URL="GET YOUR OWN URL FROM https://upstash.com/"
-UPSTASH_REDIS_REST_TOKEN="GET YOUR OWN URL FROM https://upstash.com/"
+UPSTASH_REDIS_REST_TOKEN="GET YOUR OWN KEY FROM https://upstash.com/"
